# basil

./: .gitignore  MAKEFILE  MODULE.bazel  README.md  go.mod
libraries/humanize_filesize/: BUILD.bazel  humanize_filesize.go  humanize_filesize_test.go
services/service1/: BUILD.bazel  service1.go
